style : changed css

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <p class="error-message"></p>
 
-        <table>
+        <table class="notesTable">
             <caption>Register</caption>
             <tr>
                 <th>Notes</th>
