--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 
         <p class="error-message"></p>
 
+        <div class="return-change">
+            Changed to be returned = 
+        </div>
+
         <table class="notesTable">
             <caption>Register</caption>
             <tr>
