--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p class="description">This cash register takes the bill amount and cash paid and returns the amount and minimum number of notes to
             be
             returned.
-            Available currencies: 1,5,10,20,100,500,2000.
+            Available currencies: 1, 5, 10, 20, 100, 500, 2000.
         </p>
 
         <label for="bill-amount">Bill Amount : </label>
@@ -33,7 +33,6 @@
         <p class="error-message"></p>
 
         <div class="return-change">
-            Changed to be returned = 
         </div>
 
         <table class="notesTable">
